tests/fixtures/errors/unclosed_brace.sysml
package Test {
    part def Vehicle {
        part engine;

